<resources>
    <string name="app_name">ParentApp</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for CHILD LIST ACTIVITY -->
    <string name="child_list_activity_toolbar_label">Child List</string>
    <string name="timer_activity_end_message">Done</string>

    <string name="dialog_duration_title">Select Duration</string>

    <string name="dialog_custom_duration_title">Custom Duration</string>
    <string name="dialog_custom_duration_invalid_input">Please send a valid number of minutes.</string>
    <string name="dialog_custom_duration_start_button">Start</string>
    <string name="dialog_custom_duration_dialog_cancel">Cancel</string>
    <string name="dialog_custom_duration_hint">Minutes</string>
    <string name="btn_timer_reset">Reset</string>
    <string name="btn_timer_resume">Resume</string>
    <string name="btn_timer_pause">Pause</string>
    <string name="timer_activity_hh_mm_ss">%02d:%02d:%02d</string>
    <string name="channel_name">Main_Channel</string>
    <string name="channel_description">Main Channel to handle notifications from the parent app.</string>
    <string name="btn_timer_start">Start</string>
    <string name="image_of_a_coin">image of a coin</string>

    <!-- Strings used for ADD/EDIT CHILD ACTIVITY -->
    <string name="add_child_button_text_for_toolbar">Add Child</string>
    <string name="add_child_button_text">Add</string>
    <string name="child_name_label">Name:</string>
    <string name="hint_enter_child_name">Name</string>
    <string name="add_child_title">Add Child</string>
    <string name="edit_child_button_text">Edit</string>
    <string name="edit_child_title">Edit Child</string>
    <string name="confirm_edit_child_dialog_box_message">
        Are you sure you want the name from \"%1$s\" to \"%2$s\"?
    </string>
    <string name="delete_child_button_text">Delete child</string>
    <string name="confirm_delete_child_dialog_box_message">
        Are you sure you want to delete \"%1$s\" from your list?
    </string>
    <string name="toast_has_been_added_to_list">
        \"%1$s\" has been added to the list
    </string>
    <string name="warning_change_happened_for_add_child">
        Are you sure you want to go back? This will not add the new child!!
    </string>
    <string name="warning_change_happened_for_edit_child">
        Are you sure you want to go back? This will not edit the name of the child!!
    </string>
    <string name="warning_message">Warning…</string>
    <string name="empty_name">Did not save because the name is empty!!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="did_not_change_name_text_for_dialog_box">Did not change name!!</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="timer_live_text">00:00:00</string>
    <string name="start">START</string>
    <string name="initial_time">Selected\n%s</string>
    <string name="time_elapsed">Elapsed\n%s</string>
    <string name="custom_minutes">Custom Minutes</string>
    <string name="title_main_activity">Parental App</string>
    <string name="configure_children">Configure Children</string>

    <string name="timeout_timer">Timeout Timer</string>
    <string name="timer_reset_button">Timer Reset</string>
    <string name="alarm_channel_name">Timer Channel</string>
    <string name="timer_channel_description">Channel to post Timer end notification</string>
    <string name="activity_main_children">Children</string>
    <string name="flip_a_coin">Flip a Coin</string>
    <string name="activity_main_timer">Timer</string>
    <!-- String used for FLIP HISTORY ACTIVITY -->

    <string name="default_date_flip_information">Date</string>
    <string name="default_name_flip_information">Name:</string>
    <string name="default_did_win_flip_information">win?</string>
    <string name="default_child_choice_flip_information">choice</string>
    <string name="child_choice_for_flip">Chose %1$s and %2$s</string>
    <string name="flip_history_activity_toolbar_label">Flip History</string>
    <!-- ===================================== -->

    <!-- Strings used for FLIP ACTIVITY -->
    <string name="print_child_name_current_previous_flip">Current Child: %1$s \nPrevious Child: %2$s</string>
    <string name="previous_child_tv_string">Previous:</string>
    <string name="current_child_tv_string">Current: </string>
    <string name="which_side_do_you_think_it_will_land_on">Which side do you think it will land on?</string>
    <string name="image_of_coin_flip_to_start_animation">Image of coin flip to start animation</string>
    <string name="flip_activity_toolbar_label">Coin Flip</string>
    <string name="help_activity_toolbar_label">Help</string>
    <string name="timer_activity_toolbar_label">Timeout Timer</string>
    <string name="history_of_flips">History</string>
    <string name="Heads">Heads</string>
    <string name="Tails">Tails</string>
    <string name="no_child_string">---</string>
    <string name="child_won">won</string>
    <string name="child_lost">lost</string>
    <string name="help_button">Help button</string>
    <string name="save_button_description">Save Button</string>
    <string name="child_image_description">Child Image</string>
    <string name="title_main">Parental App</string>
    <string name="manage_tasks_text">Manage Tasks</string>
    <string name="previous_child_image">Previous child image</string>
    <string name="coin_flip_menu">Coin Flip Menu</string>
    <string name="menu_task_edit_label">Edit Task</string>
    <string name="btn_task_delete_label">Delete Task</string>
    <string name="task_mark_as_done_label">Done</string>
    <string name="task_detail_child_image_description">Child\'s Image</string>
    <string name="task_name_label">Name:</string>
    <string name="task_list_title">Tasks</string>
    <string name="task_add_title">Add Task</string>

    <string name="delete_task">Delete Task</string>
    <string name="warning_change_happened_for_add_task">
        Are you sure you want to go back? This will not add the new task.
    </string>
    <string name="add_task_title">Add Task</string>
    <string name="edit_task_button_text">Edit</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="confirm_edit_task_dialog_box_message">
        Are you sure you want the name from \"%1$s\" to \"%2$s\"?
    </string>
    <string name="confirm_delete_task_dialog_box_message">
        Are you sure you want to delete \"%1$s\" from your task list?
    </string>
    <string name="warning_change_happened_for_edit_task">
        Are you sure you want to go back? This will not edit the name of the task.
    </string>
    <string name="cancel">Cancel</string>
    <string name="confirm_turn">Confirm Turn</string>
    <string name="task_name">Task Name</string>
    <string name="resources_used">Resources Used</string>
    <string name="team_helium">Team Helium</string>
    <string name="resource_links1">Menu Timer: https://icons8.com/icon/8YCHhvwCdMI0/clock\nMenu Tasks: https://icons8.com/icon/0Y3lDsW7gKTm/tasks\nMenu add/delete: https://icons8.com/icon/iJRdexk2R7eH/add\nMenu Coin: https://icons8.com/icon/SohcD1NaJrgg/us-dollar\nCoin heads: https://www.subpng.com/png-l21sit/\nCoin sound: https://bit.ly/3CGyNIT\nCoin tails: https://bit.ly/3kXESeg\nFlip Coin: https://bit.ly/3CCAGGI\nCalming Sound: https://mixkit.co/free-sound-effects/sea/</string>
    <string name="meet_the_team">Meet the Team:\nDivij\nSagardeep\nSukhpal\nHarjap</string>
    <string name="help_button_text">Help</string>

    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="set_image_btn_label">Set Image</string>
    <string name="camera_permission_message">You need to grant camera permission to take photo of the child</string>
    <string name="storage_permission_message">You need to grant read external storage permission to choose a photo of the child</string>
    <string name="choose_picture">Choose picture</string>
    <string name="could_not_create_file">Could not create a file.</string>
    <string name="name_can_not_be_empty">Name can not be empty</string>

    <string name="task_deleted_toast_message">Task Deleted</string>
    <string name="up_alert_title">Unsaved Changes</string>
    <string name="delete_alert_title">Confirm Delete</string>
    <string name="empty_child_name_message">Child Name cannot be empty.</string>
    <string name="no_children_configure_message">No Children Configured.</string>
    <string name="breathe">Breathe</string>
    <string name="toss_result">Toss Result</string>
    <string name="toast_10s_button_held">Release your breath</string>
    <string name="button_time_held">\Held button for: %1$ds</string>
    <string name="text_view_breaths_taken_count">Taken %1$d of %2$d breaths</string>

    <string name="breathe_in_text">Breathe IN</string>
    <string name="breathe_out_text">Breathe OUT</string>
    <string name="all_breaths_taken">Good Job</string>
    <string name="breathe_value_null">Please enter a number.</string>
    <string name="breaths_entered_invalid">Number of breaths must be between %1$d and %2$d</string>

    <string name="save_button_text">Save</string>
    <string name="twenty_five">25</string>
    <string name="fifty">50</string>
    <string name="seventy_five">75</string>
    <string name="one_hundred">100</string>
    <string name="two_hundred">200</string>
    <string name="three_hundred">300</string>
    <string name="four_hundred">400</string>
    <string name="help">Help</string>
    <string name="breath">Breath</string>
    <string name="breath_image">Breath Image</string>
    <string name="help_image">Help Image</string>
    <string name="_25">25%</string>
    <string name="_50">50%</string>
    <string name="_75">75%</string>
    <string name="_100">100%</string>
    <string name="_200">200%</string>
    <string name="_300">300%</string>
    <string name="_400">400%</string>
    <string name="task_history_deleted_child">Deleted Child</string>
    <string name="how_many_breaths_would_you_like_to_take">How many breaths would you like to take?</string>
    <string name="begin">Begin</string>
    <string name="button_increase_decrease_size">button increase decrease size</string>
</resources>