<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_child_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/child_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/child_image_icon" />

    <TextView
        android:id="@+id/tv_task_date"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="24dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:gravity="start|center_vertical"
        android:text="@string/default_date_flip_information"
        android:textColor="?colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@id/tv_child_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/iv_child_image" />

    <TextView
        android:id="@+id/tv_child_name"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:layout_marginEnd="8dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="24dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:gravity="start|center_vertical"
        android:text="@string/default_name_flip_information"
        android:textColor="?colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/iv_child_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_task_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_task_date" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="100dp"
        app:layout_constraintGuide_percent="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>