<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".ui.ChildActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ParentApp.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Theme.ParentApp.PopupOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent"
            app:subtitleTextColor="?colorOnPrimary"
            app:titleTextColor="?colorOnPrimary" />

    </com.google.android.material.appbar.AppBarLayout>


    <EditText
        android:id="@+id/txt_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="20dp"
        android:autoSizeMaxTextSize="100dp"
        android:autoSizeMinTextSize="10dp"
        android:autoSizeStepGranularity="2dp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:hint="@string/hint_enter_child_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="4dp"
        android:textColor="?colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toTopOf="@+id/name_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:src="@drawable/ic_baseline_save_24"
        app:tint="#FFFFFF"
        app:backgroundTint="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/save_button_description" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/task_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>